Fixed footer overflow on smaller devices, and changed bootstrap.css color

--- a/css/main.css
+++ b/css/main.css
@@ -194,10 +194,6 @@ img {
     width: 75%;
 }
 
-#copyright h3 p {
-    display: inline-block;
-}
-
 .scrollToTop {
     bottom: 50px;
     right: 40px;
